# astraea.cpp

./: .dockerignore  .env.example  .gitignore  BENCHMARK_PERF.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  MCP.md  PLAN.md  PLAN_feedback.md  README.md  docker-compose.yml  finding.md
.github/workflows/: ci.yml
apps/: CMakeLists.txt
apps/building_consents/: CMakeLists.txt  main.cpp
apps/hello_sse/: CMakeLists.txt  README.md  main.cpp
apps/llm_wiki/: CMakeLists.txt  README.md  main.cpp  wiki_ops.cpp  wiki_ops.hpp  wiki_store.cpp  wiki_store.hpp
apps/llm_wiki/static/: index.html
apps/nz_tenancy/: CMakeLists.txt  README.md  generate_routes_hash.cmake  main.cpp  mcp_handler.cpp  mcp_handler.hpp  mimalloc_override.cpp
apps/nz_tenancy/frontend/static/: app.js  index.html  robots.txt  style.css
apps/nz_tenancy/frontend/static/astraea/: astraea.js
bindings/: CMakeLists.txt  bindings.cpp
checks/: 00_baseline_post_boundary.md  01_python_parity.md  02_cpp_only_audit.txt  02_lint_baseline.txt  03_dominance_fixtures.txt  04_baseline_trace.md  05_pr4_scope.md  06_pr4_trace_diff.md  07_eval_run1.md  08_pr4_summary.md  09_bottom10_report_b70507a.md
docs/: medium_draft.md
include/astraea/: aho_corasick.hpp  anchor.hpp  anthropic_client.hpp  async_semaphore.hpp  config.hpp  coordinator.hpp  embedder.hpp  feedback.hpp  generator.hpp  geocode_client.hpp  health.hpp  in_process_coordinator.hpp  jurisdiction.hpp  pipeline.hpp  redis_coordinator.hpp  request_id.hpp  reranker.hpp  retriever.hpp  retriever_types.hpp  route_table.hpp  route_validator.hpp  routing.hpp  sanitize.hpp  session.hpp  term_match.hpp  timing.hpp
include/astraea/detail/: anchor_helpers.hpp  hiredis_runtime.hpp  http_stream_parser.hpp  llm_stream.hpp  llm_tcp_pool.hpp  pipeline_helpers.hpp  redis_url.hpp  when_all.hpp
jurisdictions/: CMakeLists.txt
jurisdictions/building_consents/: jurisdiction.cpp  jurisdiction.hpp  prompt.hpp  routes.cpp  routes.hpp
jurisdictions/nz_tenancy/: jurisdiction.cpp  jurisdiction.hpp  prompt.hpp  routes.cpp  routes.hpp
src/: aho_corasick.cpp  anchor.cpp  anthropic_client.cpp  async_semaphore.cpp  embedder.cpp  feedback.cpp  generator.cpp  health.cpp  hiredis_runtime.cpp  http_stream_parser.cpp  llm_stream.cpp  llm_tcp_pool.cpp  pipeline.cpp  redis_coordinator.cpp  request_id.cpp  reranker.cpp  retriever.cpp  route_validator_corpus.cpp  route_validator_pure.cpp  routing.cpp  sanitize.cpp  session.cpp
tests/: CMakeLists.txt  test_ac.cpp  test_async_semaphore.cpp  test_coordinator.cpp  test_feedback.cpp  test_http_stream_parser.cpp  test_nz_tenancy_routes.cpp  test_pipeline_helpers.cpp  test_redis_coordinator.cpp  test_request_id.cpp  test_route_table.cpp  test_route_validator.cpp  test_routing.cpp  test_sanitize.cpp  test_session_helpers.cpp  test_term_match.cpp
tests/diff/: conftest.py  test_parity.py
tests/integration/: test_api_shape.py  test_golden_quality.py
tests/integration/golden/: g001_landlord_entry_notice.json  g002_rent_increase_notice.json
tools/: CMakeLists.txt  bench_sanitize.cpp  benchmark_timing.py  embed_proxy.py  lint_routes.py  lint_whitelist.json  probe_losers.py  run_nz_tenancy.sh
tools/eval_must_include/: README.md  analyze.py  run_eval.py  serve.py  sources.py
tools/eval_must_include/static/: app.js  golden.html  index.html  probe.html  probe.js  style.css
